--- a/SurveyManagement.API/SurveyManagement.API.csproj
+++ b/SurveyManagement.API/SurveyManagement.API.csproj
@@ -1,17 +1,19 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
-    <Nullable>enable</Nullable>
+    <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.3" />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="6.0.25" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SurveyManagement.Application\SurveyManagement.Application.csproj" />
+    <ProjectReference Include="..\SurveyManagement.Core\SurveyManagement.Core.csproj" />
     <ProjectReference Include="..\SurveyManagement.Infrastructure\SurveyManagement.Infrastructure.csproj" />
   </ItemGroup>
 
